# api-development-course

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
about/changelog/: index.html
about/code_of_conduct/: index.html
about/contributing/: index.html
api_development_course/: __init__.py  main.py
docs/: packages.mmd  requirements.txt
search/: search_index.json
tests/: __init__.py
